refined process onboarding wizard
